# craftee

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SPEC.md  devenv.nix
src/: main.rs
